name:                neo4j-experiments
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/stephenjbarr/neo4j-experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen J. Barr
maintainer:          stephen@planetbarr.com
copyright:           None
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , haskell-neo4j-client                     >= 0.3.2.0 
  default-language:    Haskell2010

executable neo4j-experiments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neo4j-experiments
  default-language:    Haskell2010

test-suite neo4j-experiments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neo4j-experiments
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stephenjbarr/neo4j-experiments